Added Create customer function to make customer id to create service ticket
